<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <com.example.calculator.FontFitTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/monitorTextView"
        android:textAlignment="viewStart"
        android:text="@string/zero"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:layout_weight="3"
        android:layout_margin="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_changer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/sign_changer"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/open_parenthesis"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/openParenthesis"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/close_parenthesis"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/closeParenthesis"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/division"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/seven"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/eight"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/nine"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/multiply"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/four"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/five"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/six"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/minus"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/one"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/two"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/three"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/plus"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backspace"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:backgroundTint="#673AB7"
            android:contentDescription="@string/backspace"
            android:fontFamily="monospace"
            android:maxHeight="10dp"
            android:textColor="#F8F0BA"
            app:icon="@drawable/backspace_icon" />

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/zero"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/dot"
            android:textColor="#F8F0BA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:fontFamily="monospace"
            android:text="@string/equals"
            android:textColor="#F8F0BA"
            android:textSize="25sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>